--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/react-dom": "^18.2.17",
     "@types/react-redux": "^7.1.32",
     "husky": "^8.0.3",
+    "lint-staged": "^13.0.0",
     "prettier": "^3.1.0",
     "typescript": "^5.3.3"
   },
@@ -54,5 +55,8 @@
     "plugins": {
       "autoprefixer": {}
     }
+  },
+  "lint-staged": {
+    "*.tsx": "npm run fix-style"
   }
 }
