--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "final_catalog",
+  "homepage": "https://github.com/fe-aug23-team3/product_catalog",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,6 +11,7 @@
     "axios": "^1.6.2",
     "classnames": "^2.3.2",
     "eslint-plugin-prettier": "^5.0.1",
+    "gh-pages": "^6.1.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -22,6 +24,8 @@
     "sass-loader": "^13.3.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -50,13 +54,14 @@
     "prettier": "^3.1.0",
     "typescript": "^5.3.3"
   },
-  "homepage": ".",
   "postcss": {
     "plugins": {
       "autoprefixer": {}
     }
   },
   "lint-staged": {
-    "*.tsx": "npm run fix-style"
+    "*.ts": "npm run fix-style",
+    "*.tsx": "npm run fix-style",
+    "*.scss": "npm run fix-style"
   }
 }
