--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "final_catalog",
-  "homepage": "https://github.com/fe-aug23-team3/product_catalog",
+  "homepage": "https://fe-aug23-team3.github.io/product_catalog",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
