--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "husky": "^8.0.3",
     "lint-staged": "^13.0.0",
     "prettier": "^3.1.0",
+    "tailwindcss": "^3.3.6",
     "typescript": "^5.3.3"
   },
   "postcss": {
