Save before new installation

--- a/package.json
+++ b/package.json
@@ -62,7 +62,6 @@
   },
   "lint-staged": {
     "*.ts": "npm run fix-style",
-    "*.tsx": "npm run fix-style",
-    "*.scss": "npm run fix-style"
+    "*.tsx": "npm run fix-style"
   }
 }
