--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.6.2",
     "classnames": "^2.3.2",
     "eslint-plugin-prettier": "^5.0.1",
+    "framer-motion": "^10.16.16",
     "gh-pages": "^6.1.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
