--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.1",
     "react-scripts": "^5.0.1",
+    "react-slick": "^0.29.0",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
     "sass": "^1.69.5",
@@ -50,6 +51,7 @@
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@types/react-redux": "^7.1.32",
+    "@types/react-slick": "^0.23.12",
     "husky": "^8.0.3",
     "lint-staged": "^13.0.0",
     "prettier": "^3.1.0",
