--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.1",
+    "@types/styled-components": "^5.1.34",
     "axios": "^1.6.2",
     "classnames": "^2.3.2",
     "eslint-plugin-prettier": "^5.0.1",
@@ -19,10 +20,12 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.1",
     "react-scripts": "^5.0.1",
+    "react-slick": "^0.29.0",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
     "sass": "^1.69.5",
-    "sass-loader": "^13.3.2"
+    "sass-loader": "^13.3.2",
+    "slick-carousel": "^1.8.1"
   },
   "scripts": {
     "predeploy": "npm run build",
@@ -50,8 +53,9 @@
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@types/react-redux": "^7.1.32",
+    "@types/react-slick": "^0.23.12",
     "husky": "^8.0.3",
-    "lint-staged": "^13.0.0",
+    "lint-staged": "^12.4.0",
     "prettier": "^3.1.0",
     "tailwindcss": "^3.3.6",
     "typescript": "^5.3.3"
