--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "@types/react-redux": "^7.1.32",
     "@types/react-slick": "^0.23.12",
     "husky": "^8.0.3",
-    "lint-staged": "^13.0.0",
+    "lint-staged": "12.4.0",
     "prettier": "^3.1.0",
     "tailwindcss": "^3.3.6",
     "typescript": "^5.3.3"
