--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "CI=false && react-scripts build",
+    "build-local": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint . --ignore-path .gitignore --fix",
